--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -95,7 +95,7 @@
 
                                     <ul>
                                         <?php foreach($champ['VALEURS'] as $valeur): ?>
-                                            <li><?= $valeur['VALEUR'] ?></li>
+                                            <li><?= htmlspecialchars($valeur['VALEUR']) ?></li>
                                         <?php endforeach ?>
                                     </ul>
                                 <?php endif ?>
