Ajout d'un type de champ 'Parent' (#40)
* mise en place read partie admin

* rectification method form

* ajout suppression fils parent

* ajout insert + redirection suppresion child parent

* crud admin

* partial component inputChamp

* dynamisme partial

* bug id = NULL

* supp com

* bug fix ID NULL + affichage valeur variable form custom vartext

* ajout special char

* rectif css + ajout htmlspecialchar

* fix-list champ fils et independant

* fix-list champ fils et independant

* fix faille XSS display champs

* htmlspecialchar inputChamp

* ajout canWrite

* read client descriptif etab

* partial formLoopInputChamp

* rectification checkbox

* avant edition verif technique

* read verification technique par partial

* ajout ecriture verif techniques

* rectif

* rectif indent

* fixme  +  suppression attribution inutile

* BUG FIX actualisation formulaire ajout champ

* suppression console.log

* suppression variable inutile

* ajout valeur champs fils

* ajout sql

* Fix du SQL d'ajout du type de champ parent

* rectif condition

* reconstruction generateur formulaire front

* read formulaire custom

* CRUD custom form

* bug rubriques

* suppression var_dump

* fix value int partial-input-champ

* rectification rubrique + supp var_dump

* uncomment

* rectif min

* rectif passage ligne input champ

* modif descripitf service champs fils parent

* generationpv

* generation odj

* generation compte rendu ok

* ajout generation  convoc

* php-cs-fixer

* correction magical number

* php-cs-fixer

* Suppression de code en doublon et corrections

* Modifications visuelles

* Harmonisation des formulaires

* Corrections visuelles

* Correction sur l'ajout d'un champ fils en ajax

* Correction de la suppression des champs fils

* Correction sur la gestion du type Liste en tant qu'enfant

* Ajout des informations du parent sur un champ enfant

* S

--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -7,72 +7,12 @@
 
     <h4 class='h4_subtitle'>Descriptif technique</h4>
     <?= $this->partialLoop('formulaire/partials/partial-rubrique-display.phtml', $this->rubriques) ?>
-    
-    <!-- TODO Faire la même avec des partials loops -->
-    <?php foreach ($this->rubriques as $rubrique):
-        if (boolval($rubrique['DISPLAY']) === true): ?>
-            <h4 class='h4_subtitle' id='<?= strtolower(preg_replace('/\s+/', '-', $rubrique["NOM"])) ?>'><?= $rubrique['NOM'] ?></h4>
 
-            <div id='affichage-informations' class='form-horizontal'>
-                <?php if (!empty($rubrique['CHAMPS'])):
-                    $numberOfFilledField = 0;
-                    
-                    foreach ($rubrique['CHAMPS'] as $champ):
-                        if (
-                            ($champ['ID_TYPECHAMP'] !== 5 && $champ['VALEUR'] !== null)
-                            || ($champ['ID_TYPECHAMP'] === 5 && $champ['VALEUR'] !== null && $champ['VALEUR'] !== 0)
-                        ):
-                            $numberOfFilledField++ ?>
-                            <div class='control-group'>
-                                <strong class='control-label'><?= $champ['NOM'] ?></strong>
-                                <div class='controls'>
-                                    <?php switch ($champ['ID_TYPECHAMP']) {
-                                        // Texte
-                                        case 1:
-                                        // Nombre
-                                        case 4: ?>
-                                            <div class='text-control'><?= $champ['VALEUR'] ?></div>
-                                        <?php break;
-                                        // Texte long
-                                        case 2: ?>
-                                            <textarea readonly><?= $champ['VALEUR'] ?></textarea>
-                                        <?php break;
-                                        // Liste
-                                        case 3: ?>
-                                            <select disabled>
-                                                <?php foreach($this->champsvaleurliste[$champ['ID_CHAMP']] as $champvaleurliste): ?>
-                                                    <option
-                                                        value="<?= $champvaleurliste['VALEUR'] ?>"
-                                                        <?= $champvaleurliste['VALEUR'] === $champ['VALEUR'] ? 'selected' : '' ?>
-                                                    >
-                                                        <?= $champvaleurliste['VALEUR'] ?>
-                                                    </option>
-                                                <?php endforeach ?>
-                                            </select>
-                                        <?php break;
-                                        // Case à cocher
-                                        case 5: ?>
-                                            <input type='checkbox' disabled <?= $champ['VALEUR'] ? 'checked' : '' ?>>
-                                        <?php break;
-                                        default:
-                                            break;
-                                    } ?>
-                                </div>
-                            </div>
-                        <?php endif;
-                    endforeach;
-
-                    if ($numberOfFilledField === 0):
-                        echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
-                            'message' => 'Aucune valeur renseignée.'
-                        ]);
-                    endif;
-                else: 
-                    echo $this->partial('formulaire/partials/partial-information-manquante.phtml', [
-                        'message' => 'Aucun champ renseigné. Contactez un administrateur Prevarisc.'
-                    ]);
-                endif ?>
-            </div>
-        <?php endif;
-    endforeach ?>
+    <div id='affichage-informations' class='form-horizontal'>
+        <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
+            'rubriques' => $this->rubriques,
+            'champsvaleurliste' => $this->champsvaleurliste,
+            'canWrite' => false
+        ]); ?>
+    </div>
 </div>
