--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -316,40 +316,63 @@ function retrieveInfoDossier($segment, $dossierInfos) {
     foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
         // Permet d'avoir les informations unitairement
         foreach ($formulaire['RUBRIQUES'] as $rubrique) {
-            addChamp(
-                $segment,
-                $serviceUtils->getFullFusionName(
-                    $formulaire['NOM_INTERNE'],
-                    [
-                        $rubrique['NOM']
-                    ]
-                ),
-                $rubrique['NOM']
-            );
-
-            foreach ($rubrique['CHAMPS'] as $champ) {
-                // Définition du libellé pour les cases à cocher
-                if ('Case à cocher' === $champ['TYPE']) {
-                    if (true === boolval($champ['VALEUR'])) {
-                        $champ['VALEUR'] = 'Oui';
-                    } else {
-                        $champ['VALEUR'] = 'Non';
-                    }
-                }
-
-                addChamp(
-                    $segment,
-                    $serviceUtils->getFullFusionName(
-                        $formulaire['NOM_INTERNE'],
-                        [
-                            $rubrique['NOM'],
-                            $champ['NOM']
-                        ]
-                    ),
-                    $champ['VALEUR']
-                );
-            }
-        }
+			addChamp(
+				$segment,
+				$serviceUtils->getFullFusionName(
+					$formulaire['NOM_INTERNE'],
+					[
+						$rubrique['NOM']
+					]
+				),
+				$rubrique['NOM']
+			);
+			foreach ($rubrique['CHAMPS'] as $champ) {
+				//Si le champ est un champ Parent alors ....
+				if($champ['ID_TYPECHAMP'] === 6){
+					foreach ($champ['FILS'] as $champFils) {
+						if ('Case à cocher' === $champFils['TYPE']) {
+                            if (true === boolval($champFils['VALEUR'])) {
+                                $champFils['VALEUR'] = 'Oui';
+                            } else {
+                                $champFils['VALEUR'] = 'Non';
+                            }
+                        }
+                        addChamp(
+                            $segment,
+                            $serviceUtils->getFullFusionName(
+                                $formulaire['NOM_INTERNE'],
+                                [
+                                    $rubrique['NOM'],
+                                    $champ['NOM'],
+                                    $champFils['NOM']
+                                ]
+                            ),
+                            $champFils['VALEUR']
+						);
+					}
+				}else{
+					// Définition du libellé pour les cases à cocher
+					if ('Case à cocher' === $champ['TYPE']) {
+						if (true === boolval($champ['VALEUR'])) {
+							$champ['VALEUR'] = 'Oui';
+						} else {
+							$champ['VALEUR'] = 'Non';
+						}
+					}
+					addChamp(
+						$segment,
+						$serviceUtils->getFullFusionName(
+							$formulaire['NOM_INTERNE'],
+							[
+								$rubrique['NOM'],
+								$champ['NOM']
+							]
+						),
+						$champ['VALEUR']
+					);
+				}
+			}
+		}
     }
 }
 
