--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -138,7 +138,7 @@ foreach($this->membresFiles as $val => $membre){
 						}
 
                         // Gestion des avis & dérogations
-                        $segmentAvisDerogations = $dossInfos->avisDerogations;
+                        $segmentAvisDerogations = isset($dossInfos->avisDerogations) ? $dossInfos->avisDerogations : null;
 
                         foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
                             addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
@@ -161,8 +161,11 @@ foreach($this->membresFiles as $val => $membre){
                         // Gestion des formulaires personnalisés
                         $serviceUtils = new Service_Utils();
 
+						//Ajout du model permettant de recuperer les champ fils d un parent
+						$modelChamp = new Model_DbTable_Champ();
+
                         foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
-                            // Permet d'avoir les informations unitairement
+							// Permet d'avoir les informations unitairement
                             foreach ($formulaire['RUBRIQUES'] as $rubrique) {
                                 addChamp(
                                     $odf,
@@ -174,28 +177,51 @@ foreach($this->membresFiles as $val => $membre){
                                     ),
                                     $rubrique['NOM']
                                 );
-
                                 foreach ($rubrique['CHAMPS'] as $champ) {
-                                    // Définition du libellé pour les cases à cocher
-                                    if ('Case à cocher' === $champ['TYPE']) {
-                                        if (true === boolval($champ['VALEUR'])) {
-                                            $champ['VALEUR'] = 'Oui';
-                                        } else {
-                                            $champ['VALEUR'] = 'Non';
-                                        }
-                                    }
-
-                                    addChamp(
-                                        $odf,
-                                        $serviceUtils->getFullFusionName(
-                                            $formulaire['NOM_INTERNE'],
-                                            [
-                                                $rubrique['NOM'],
-                                                $champ['NOM']
-                                            ]
-                                        ),
-                                        $champ['VALEUR']
-                                    );
+									//Si le champ est un champ Parent alors ....
+									if($champ['ID_TYPECHAMP'] === 6){
+										foreach ($champ['FILS'] as $champFils) {
+											if ('Case à cocher' === $champFils['TYPE']) {
+                                                if (true === boolval($champFils['VALEUR'])) {
+                                                    $champFils['VALEUR'] = 'Oui';
+                                                } else {
+                                                    $champFils['VALEUR'] = 'Non';
+                                                }
+                                            }
+                                            addChamp(
+                                                $odf,
+                                                $serviceUtils->getFullFusionName(
+                                                    $formulaire['NOM_INTERNE'],
+                                                    [
+                                                        $rubrique['NOM'],
+                                                        $champ['NOM'],
+                                                        $champFils['NOM']
+                                                    ]
+                                                ),
+                                                $champFils['VALEUR']
+                                            );
+										}
+									}else{
+										// Définition du libellé pour les cases à cocher
+										if ('Case à cocher' === $champ['TYPE']) {
+											if (true === boolval($champ['VALEUR'])) {
+												$champ['VALEUR'] = 'Oui';
+											} else {
+												$champ['VALEUR'] = 'Non';
+											}
+										}
+										addChamp(
+											$odf,
+											$serviceUtils->getFullFusionName(
+												$formulaire['NOM_INTERNE'],
+												[
+													$rubrique['NOM'],
+													$champ['NOM']
+												]
+											),
+											$champ['VALEUR']
+										);
+									}
                                 }
                             }
                         }
