Ordonnancement des rubriques et des champs (#42)
* ajout sortable.js + script sql

* ajout dnd edit rubrique + preparation obj envoie requete

* ajout dans generateur fleche dnd

* mise en place read partie admin

	modifié :         application/controllers/FormulaireController.php
	nouveau fichier : application/forms/FormChampFromParent.php
	modifié :         application/models/DbTable/Champ.php
	modifié :         application/models/DbTable/ListeTypeChampRubrique.php
	modifié :         application/views/scripts/formulaire/edit-champ.phtml
	modifié :         application/views/scripts/formulaire/edit-rubrique.phtml

* rectification method form

* ajout suppression fils parent

* ajout insert + redirection suppresion child parent

* crud admin

* partial component inputChamp

* dynamisme partial

* bug id = NULL

* supp com

* bug fix ID NULL + affichage valeur variable form custom vartext

* ajout special char

* rectif css + ajout htmlspecialchar

* fix-list champ fils et independant

* fix-list champ fils et independant

* fix faille XSS display champs

* htmlspecialchar inputChamp

* ajout canWrite

* read client descriptif etab

* partial formLoopInputChamp

* rectification checkbox

* avant edition verif technique

* read verification technique par partial

* ajout ecriture verif techniques

* rectif

* rectif indent

* fixme  +  suppression attribution inutile

* BUG FIX actualisation formulaire ajout champ

* suppression console.log

* suppression variable inutile

* ajout valeur champs fils

* ajout sql

* Fix du SQL d'ajout du type de champ parent

* rectif condition

* reconstruction generateur formulaire front

* read formulaire custom

* CRUD custom form

* bug rubriques

* suppression var_dump

* fix value int partial-input-champ

* rectification rubrique + supp var_dump

* uncomment

* rectif min

* rectif passage ligne input champ

* modif descripitf servi

--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -70,14 +70,16 @@
             <table class="table table-bordered table-condensed">
                 <thead>
                     <tr>
+                        <th></th>
                         <th>Nom du champ</th>
                         <th>Type du champ</th>
                         <th></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id='grp1' class="grp">
                     <?php foreach($this->champs as $champ): ?>
-                        <tr>
+                        <tr id=<?=$champ['ID_CHAMP']?>>
+                            <td class='tdMove'><i class="icon-move"></i></td>
                             <td><?= $champ['NOM'] ?></td>
                             <td>
                                 <?= $champ['TYPE'] ?>
