--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -27,8 +27,14 @@ div[id^='saved-rubriques-'] a {
     display: none;
 }
 
-#default-display, #actions {
+#default-display,
+#actions,
+td.tdMove {
     vertical-align: middle;
+}
+
+td.tdMove {
+    text-align: center;
 }
 
 #actions a {
